--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "nodegit": "^0.22.2"
   },
   "dependencies": {
-    "is-binary-path": "^2.0.0"
+    "file-type": "^8.1.0",
+    "fs-extra": "^6.0.1",
+    "is-binary-path": "^2.0.0",
+    "through2": "^2.0.3",
+    "vinyl": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
